# finanalyzer

./: .gitignore  pyproject.toml
Analyze_Finances/: generate_mappings.py
Analyze_Finances/Assets/: category_mappings.py
finanalyzer/: analyze_finances.py  generate_mappings.py
finanalyzer/assets/: test.csv  transaction_schema.sql
flaskapp/: __init__.py  run.py
flaskapp/app/: __init__.py  auth.py  db.py  routes.py
flaskapp/app/static/: styles.css
flaskapp/app/templates/: base.html
flaskapp/app/templates/auth/: auth_form.html  login.html  register.html  update.html
flaskapp/app/templates/routes/: dashboard.html  landing.html
