[tool.poetry]
name = "finanalyzer"
version = "0.0.0"
description = "Ongoing project to make it easier to analyze my finances"
authors = ["Terrence Jackson"]
readme = "README.md"
packages = [{include = "finanalyzer"}]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
matplotlib = "^3.8.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
